# pai_final

./: .gitmodules  LICENSE  README.md
deprecated/intelligent_move/: CMakeLists.txt  README.md  intelligent_move_node.py  main.py  package.xml  requirements.txt  setup.cfg  setup.py
deprecated/intelligent_move/launch/: intelligent_move_launch.py
deprecated/intelligent_move/src/: chatgpt_integration.py  object_detection.py  robot_controller.py  speech_recognition_module.py
scene/: scene.usd
