<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intelligent_move</name>
  <version>1.0.0</version>
  <description>Intelligent robot movement with voice control and object detection</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-speech-recognition</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-openai</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>